initial commit for SHarkfeed

--- a/SharkFeed/Base.lproj/LaunchScreen.storyboard
+++ b/SharkFeed/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,29 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="EgA-Uk-JM3">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SharkFeed" translatesAutoresizingMaskIntoConstraints="NO" id="rmB-0a-Lyk">
+                                <rect key="frame" x="209.5" y="286.5" width="181" height="27"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SharkFeed Logo" translatesAutoresizingMaskIntoConstraints="NO" id="52j-GX-ofM">
+                                <rect key="frame" x="209.5" y="193" width="181" height="85"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rmB-0a-Lyk" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="6ZR-1o-UZE"/>
+                            <constraint firstItem="EgA-Uk-JM3" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="Alx-yA-I9m"/>
+                            <constraint firstItem="rmB-0a-Lyk" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ikc-zr-fvr"/>
+                            <constraint firstItem="rmB-0a-Lyk" firstAttribute="top" secondItem="52j-GX-ofM" secondAttribute="bottom" constant="8.5" id="Rl9-uw-Ewy"/>
+                            <constraint firstItem="EgA-Uk-JM3" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="U0F-tJ-zvQ"/>
+                            <constraint firstItem="52j-GX-ofM" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WZO-iA-Tvu"/>
+                            <constraint firstItem="EgA-Uk-JM3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Wrh-Om-8CF"/>
+                            <constraint firstItem="52j-GX-ofM" firstAttribute="width" secondItem="rmB-0a-Lyk" secondAttribute="width" id="ZYF-vL-9wB"/>
+                            <constraint firstItem="EgA-Uk-JM3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="res-Vs-XBh"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +46,9 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SharkFeed" width="179" height="27"/>
+        <image name="SharkFeed Logo" width="181" height="85"/>
+        <image name="background" width="595" height="975"/>
+    </resources>
 </document>
